--- a/src/App/App.css
+++ b/src/App/App.css
@@ -6,14 +6,32 @@ body {
   background-size: cover;
 }
 
-.gamecontainerdiv {
+.landing-header {
+  color: #fff;
+  text-align: center;
+}
+
+.landing-pic {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  border: 2px solid #303231;
+}
+
+.dev-pic {
+  margin: 20px;
+  margin-bottom: 0px;
+  border: 2px solid #303231;
+}
+
+.game-container-div {
   height: 800px;
   width: 800px;
 }
 
-.devpic {
-  margin: 20px;
-  margin-bottom: 0px;
+#story-container {
+  padding: 30px;
+  max-height: 100%;
 }
 
 #footer {
