--- a/src/App/App.css
+++ b/src/App/App.css
@@ -6,28 +6,37 @@ body {
   background-size: cover;
 }
 
-.landing-header {
+h1,
+h2,
+h3 {
   color: #fff;
   text-align: center;
+}
+ul {
+  padding: 0px 0px 0px 15px;
+}
+
+li {
+  list-style-type: none;
 }
 
 .landing-pic {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
-  border: 2px solid #303231;
+  border: 2px solid #7db1b3;
 }
 
 .dev-pic {
   margin: 20px;
   margin-bottom: 0px;
-  border: 2px solid #303231;
+  border: 2px solid #7db1b3;
 }
 
-.game-container-div {
+/* .game-container-div {
   height: 800px;
   width: 800px;
-}
+} */
 
 #story-container {
   padding: 30px;
@@ -38,4 +47,6 @@ body {
   position: fixed;
   bottom: 5px;
   right: 5px;
+  background-color: white;
+  padding: 3px;
 }
