--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,9 +1,8 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
 
 body {
   background-image: url('/src/game/assets/sprites/Background.png');
+  background-color: black;
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -38,10 +37,11 @@ li {
   border: 2px solid #7db1b3;
 }
 
-/* .game-container-div {
-  height: 800px;
-  width: 800px;
-} */
+.arcade-page {
+  background-color: black;
+  max-width: 100vw;
+  max-height: 100vh;
+}
 
 #story-container {
   padding: 30px;
