--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300;400;700&display=swap');
+@font-face {
+  font-family: DnD;
+  src: url(DnDC.ttf);
+}
 
 body {
   background-image: url('/src/game/assets/sprites/Background.png');
@@ -7,6 +11,7 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: 'Martel Sans', sans-serif;
 }
 
 h1,
@@ -14,8 +19,11 @@ h2,
 h3 {
   color: #fff;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'DnD', serif;
+  font-size: 5.5em;
+  text-shadow: 2px 2px #000;
 }
+
 ul {
   padding: 0px 0px 0px 15px;
 }
@@ -27,8 +35,14 @@ li {
 .landing-pic {
   max-width: 100%;
   max-height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   border: 2px solid #7db1b3;
+}
+
+.tech-icon {
+  width: 80px;
+  height: 50px;
+  object-fit: cover;
 }
 
 .dev-pic {
@@ -52,6 +66,5 @@ li {
   position: fixed;
   bottom: 5px;
   right: 5px;
-  background-color: white;
   padding: 3px;
 }
