--- a/src/App/App.css
+++ b/src/App/App.css
@@ -33,10 +33,16 @@ li {
 }
 
 .landing-pic {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: cover;
   border: 2px solid #7db1b3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+.landing-pic img {
+  flex-shrink: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .tech-icon {
@@ -59,7 +65,13 @@ li {
 
 #story-container {
   padding: 30px;
-  max-height: 100%;
+  /* max-height: 100%; */
+}
+
+#tech-header {
+  font-size: 3.5em;
+  margin-top: 5px;
+  letter-spacing: 0.05em;
 }
 
 #footer {
